@@ -10,6 +10,7 @@
 
 # Module::Build generated files and dirs.
 ^Build$
+^Build\.bat$
 ^_build/
 
 # Module::Install included files.
@@ -30,6 +31,7 @@
 \#$
 \b\.#
 \.bak$
+\.tmp$
 
 # Devel::Cover files.
 \bcover_db\b
