@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name: Test-DistManifest
-version: 1.001003
+version: 1.001004
 author:
   - 'Jonathan Yu <frequency@cpan.org>'
 abstract: |-
@@ -44,7 +44,7 @@ dynamic_config: 0
 provides:
   Test::DistManifest:
     file: lib/Test/DistManifest.pm
-    version: 1.001003
+    version: 1.001004
 generated_by: Module::Build version 0.3
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
