@@ -16,16 +16,16 @@ Hash: SHA1
 
 SHA1 374598505d2937f792550f19f5c8a668a1df5430 Build.PL
 SHA1 8190073af2323d80436cc0b79421cd19e095cbc9 CIRCULAR.SKIP
-SHA1 265862185ba90373b88f984020dca17dbcfbdf5a Changes
+SHA1 c60db0a32de8cb36d04398b2059d2019008c3c5e Changes
 SHA1 6bc8386fc92c74529ab0cfce62a91a369640e67e LICENSE
 SHA1 86ea176734ddbe1785af4978163e30f43c451e15 MANIFEST
 SHA1 91e8519cd6ba58a9a1810ec16c6b5b30f94edc25 MANIFEST.EXTRA
-SHA1 c4c013dae36ac310c895e97cd7e908375a8469d7 MANIFEST.SKIP
-SHA1 5c18be82b128b7058f4d13b7e3b0afc85fc00ffa META.yml
+SHA1 c1ef3014c0bc3ed78eec43db3590cecd28f39a12 MANIFEST.SKIP
+SHA1 f671eba3c84a74f6d0ae5ea49420a13abb024904 META.yml
 SHA1 7cfa2f7bdb9c7494ceb0f3260077453c41deb412 Makefile.PL
 SHA1 e18b41ceeb4f9012fa12985fc7b23caee30e8967 README
 SHA1 605a74373a17120acdd2497cd2f9a3fcbc81a730 examples/checkmanifest.t
-SHA1 f208551dfe47eec84bb23a331e50622997226c07 lib/Test/DistManifest.pm
+SHA1 f1cbdd9873cec1b2c7c4c084d117788de4a42d97 lib/Test/DistManifest.pm
 SHA1 b6f1c337969d535166dbd528ace297575b077aaf t/00signature.t
 SHA1 3f1dc7578eecb686008662e1b6400155111d3a82 t/01compile.t
 SHA1 9448154fc848b5e30726bfd0454e52cb65a57489 t/01critic.rc
@@ -41,7 +41,7 @@ SHA1 d5aab2d964d1b1f0e0d021053929e75c71dc3424 t/03core.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (GNU/Linux)
 
-iEYEARECAAYFAknxFtQACgkQYYN9T93mai8IMgCfbMuhpV4V5oTpEOoO/BTnzgWS
-h+YAn0YmW/9DWnxoQnmsXU8oXoP9J/4C
-=5+OX
+iEYEARECAAYFAkn1BUAACgkQYYN9T93mai/piwCfap24t4r0m2plUMukreAYOdaW
+W30AoJ7gylq/+3z+LQzv7RSCeN9zjsRl
+=erJG
 -----END PGP SIGNATURE-----
